--- a/logistics/test/Land_es.html
+++ b/logistics/test/Land_es.html
@@ -200,8 +200,8 @@
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h2 class="mb-1">Key Advantages of Road Freight</h2>
-            <p class="lead fs-lg mb-8 pe-xxl-2">Cost-Effective for Short and Medium Distances</p>
+            <h2 class="mb-1">Ventajas</h2>
+            <p class="lead fs-lg mb-8 pe-xxl-2">Reducción de costos</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6 col-lg-12 col-xl-6">
                 <div class="d-flex flex-row">
@@ -209,7 +209,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-user"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Flexibility and Accessibility:</h4>
+                    <h4 class="mb-1">Flexibilidad</h4>
                   </div>
                 </div>
               </div>
@@ -220,7 +220,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-usd-circle"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Cost-Effective for Short and Medium Distances</h4>
+                    <h4 class="mb-1">Reducción de costos para mediana y corta distancia</h4>
                   </div>
                 </div>
               </div>
@@ -231,7 +231,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-asterisk"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Versatile Transport Options</h4>
+                    <h4 class="mb-1">Versatil</h4>
                   </div>
                 </div>
               </div>
@@ -242,7 +242,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-truck"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Types of Inland Freight Services</h4>
+                    <h4 class="mb-1">Distintas capacidades</h4>
                   </div>
                 </div>
               </div>
@@ -253,7 +253,7 @@
           <!--/column -->
         </div>
         <!--/.row -->
-        <a href="quote.html" class="btn btn-sm btn-primary rounded">Request a quote</a>
+        <a href="quote_es.html" class="btn btn-sm btn-primary rounded">Cotiza</a>
             
         <!--/.row -->
       </div>
@@ -295,7 +295,7 @@
             <div class="widget">
               <h4 class="widget-title text-white mb-3">Saber más</h4>
               <ul class="list-unstyled  mb-0">
-                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="aboutLogistics_es.html">Sobre nosotros</a></li>
                 <li><a href="Project_es.html">Proyectos</a></li>
               </ul>
             </div>
