--- a/logistics/test/warehouse_es.html
+++ b/logistics/test/warehouse_es.html
@@ -81,7 +81,7 @@
               <li class="nav-item dropdown language-select text-uppercase">
                 <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Es</a>
                 <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="dropdown-item" href="Ocean.html">En</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="warehouse.html">En</a></li>
                   <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
                 </ul>
               </li>
@@ -110,7 +110,7 @@
         </div>
         <div class="offcanvas-body pb-6">
           <div class="widget mb-8">
-            <p>Servicios de transporte y logística.</p>
+            <p>Servicios de transporte y logístics.</p>
            </div>
           <!-- /.widget -->
           <div class="widget mb-8">
@@ -122,8 +122,8 @@
           <div class="widget mb-8">
             <h4 class="widget-title text-white mb-3">Saber más</h4>
             <ul class="list-unstyled">
-              <li><a href="aboutLogistics_es.html">Sobre Nosotros</a></li>
-              <li><a href="contact_es.html">Contacto</a></li>
+              <li><a href="aboutLogistics.html">Sobre Nosotros</a></li>
+              <li><a href="contact.html">Contacto</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -146,8 +146,8 @@
       <div class="container pt-10 pb-19 pt-md-14 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto mb-11">
-            <h1 class="display-1 mb-3">Flete Marítimo</h1>
-            <p class="lead px-lg-7 px-xl-7 px-xxl-6">El flete marítimo, o transporte marítimo, es uno de los métodos más comunes y rentables para transportar grandes cantidades de mercancías a largas distancias.</p>
+            <h1 class="display-1 mb-3">Depósito Fiscal</h1>
+            <p class="lead px-lg-7 px-xl-7 px-xxl-6">El depósito fiscal desempeña un papel crucial en la cadena de suministro al garantizar que los productos estén disponibles cuando se necesiten, ayudando a las empresas a gestionar el inventario de manera eficiente, reducir los tiempos de entrega y satisfacer la demanda de los clientes. Este tipo de almacenamiento también permite a las empresas guardar productos en ubicaciones estratégicas, optimizando la logística y reduciendo los costos de transporte, lo cual es fundamental para mantener una cadena de suministro fluida y rentable.</p>
           </div>
           <!-- /column -->
         </div>
@@ -160,7 +160,7 @@
       <div class="container pb-14 pb-md-16">
         <div class="row mb-8">
           <div class="col-12 mt-n20">
-            <figure class="rounded"><img src="./assets/img/photos/oceanfreights2.jpg" srcset="./assets/img/photos/oceanfreights2.jpg 2x" alt="" /></figure>
+            <figure class="rounded"><img src="./assets/img/photos/warehouse.jpg" alt="" /></figure>
             <div class="row">
               <div class="col-xl-10 mx-auto">
                 <div class="card image-wrapper bg-full bg-image bg-overlay bg-overlay-400 text-white mt-n5 mt-lg-0 mt-lg-n50p mb-lg-n50p border-radius-lg-top" data-image-src="./assets/img/photos/bg3.jpg">
@@ -180,26 +180,25 @@
           <div class="col-lg-6 order-lg-2">
             <div class="row gx-md-5 gy-5">
               <div class="align-self-end">
-                <figure class="rounded"><img src="./assets/img/photos/ocean_routes.png" alt=""></figure>
+                <figure class="rounded"><img src="./assets/img/photos/warehouse2.jpg"  alt=""></figure>
               </div>
-              <!--/column -->
-              
+
               <!--/column -->
             </div>
             <!--/.row -->
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h2 class="mb-1">Ventajas Clave del Flete Marítimo</h2>
-            <p class="lead fs-lg mb-8 pe-xxl-2">Rentable para Grandes Volúmenes</p>
+            <h2 class="mb-1">Ventajas </h2>
+            <p class="lead fs-lg mb-8 pe-xxl-2">Ayuda a las empresas a llevar un control de los niveles de stock, asegurando que puedan satisfacer la demanda sin sobreproducir ni quedarse sin producto.</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6 col-lg-12 col-xl-6">
                 <div class="d-flex flex-row">
                   <div>
-                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-usd-circle"></i> </div>
+                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-user"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Rentable</h4>
+                    <h4 class="mb-1">Gestión de inventario</h4>
                   </div>
                 </div>
               </div>
@@ -207,10 +206,10 @@
               <div class="col-md-6 col-lg-12 col-xl-6">
                 <div class="d-flex flex-row">
                   <div>
-                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-globe"></i> </div>
+                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-usd-circle"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Alcance Global</h4>
+                    <h4 class="mb-1">Ahorro de costos</h4>
                   </div>
                 </div>
               </div>
@@ -221,7 +220,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-asterisk"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Opciones de Envío Versátiles</h4>
+                    <h4 class="mb-1">Gestión de riesgos</h4>
                   </div>
                 </div>
               </div>
@@ -229,10 +228,10 @@
               <div class="col-md-6 col-lg-12 col-xl-6">
                 <div class="d-flex flex-row">
                   <div>
-                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-temperature"></i> </div>
+                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-truck"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Impacto Ambiental</h4>
+                    <h4 class="mb-1">Entrega más rápida</h4>
                   </div>
                 </div>
               </div>
