--- a/logistics/test/Air_es.html
+++ b/logistics/test/Air_es.html
@@ -242,7 +242,7 @@
           <!--/column -->
         </div>
         <!--/.row -->
-        <a href="quote.html" class="btn btn-sm btn-primary rounded">Cotiza</a>
+        <a href="quote_es.html" class="btn btn-sm btn-primary rounded">Cotiza</a>
             
         <!--/.row -->
       </div>
@@ -284,7 +284,7 @@
             <div class="widget">
               <h4 class="widget-title text-white mb-3">Saber más</h4>
               <ul class="list-unstyled  mb-0">
-                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="aboutLogistics_es.html">Sobre nosotros</a></li>
                 <li><a href="Project_es.html">Proyectos</a></li>
               </ul>
             </div>
