se sube en espalol

--- a/logistics/test/Project_es.html
+++ b/logistics/test/Project_es.html
@@ -46,7 +46,7 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./technology_es.html">Technología</a>
+                  <a class="nav-link" href="./technology_es.html">Tecnología</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="./green_es.html">Cambio climático</a>
