--- a/logistics/test/contact_es.html
+++ b/logistics/test/contact_es.html
@@ -36,26 +36,27 @@
                   <a class="nav-link" href="./aboutLogistics.html"">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
+                  <a class="nav-link" href="./aboutLogistics_es.html"">Sobre nosotros</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Servicios</a>
                   <ul class="dropdown-menu">
-                    <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Road</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
-
-                    <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
-
+                    <li class="nav-item"><a class="dropdown-item" href="./Ocean_es.html">Máritimo</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Air_es.html">Aéreo</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Land_es.html">Terrestre</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./container_es.html">Containers</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Project_es.html">Carga Proyecto</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./warehouse_es.html">Depósito Fiscal</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./technology.html"">Technology</a>
+                  <a class="nav-link" href="./technology_es.html">Tecnología</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./green.html"">Go Green</a>
+                  <a class="nav-link" href="./green_es.html">Cambio climático</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./contact.html"">Contact</a>
+                  <a class="nav-link" href="./contact_es.html">Contacto</a>
                 </li>
 
                   <!--/.dropdown-menu -->
@@ -81,14 +82,14 @@
           <div class="navbar-other w-100 d-flex ms-auto">
             <ul class="navbar-nav flex-row align-items-center ms-auto">
               <li class="nav-item dropdown language-select text-uppercase">
-                <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
+                <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Es</a>
                 <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="green_es.html">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="contact.html">En</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
-                <a href="quote.html" class="btn btn-sm btn-primary rounded">Request a quote</a>
+                <a href="quote_es.html" class="btn btn-sm btn-primary rounded">Cotiza</a>
               </li>
               <li class="nav-item d-lg-none">
                 <button class="hamburger offcanvas-nav-btn"><span></span></button>
@@ -108,21 +109,20 @@
         </div>
         <div class="offcanvas-body pb-6">
           <div class="widget mb-8">
-            <p>LOGISTICS AND TRANSPORTATION / SERVICES.</p>
+            <p>Servicios de transporte y logística.</p>
           </div>
           <!-- /.widget -->
           <div class="widget mb-8">
-            <h4 class="widget-title text-white mb-3">Contact Info</h4>
+            <h4 class="widget-title text-white mb-3">Contacto</h4>
             <address> Misiones 1372, 6th Floor <br /> Montevideo, Uruguay </address>
             <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /><a href="tel:+59829169416">+598 2916 9416</a> 
           </div>
           <!-- /.widget -->
           <div class="widget mb-8">
-            <h4 class="widget-title text-white mb-3">Learn More</h4>
+            <h4 class="widget-title text-white mb-3">Saber más</h4>
             <ul class="list-unstyled">
-              <li><a href="aboutLogistics.html">Our Story</a></li>
-              <li><a href="terms.html">Terms of Use</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="aboutLogistics_es.html">Sobre Nosotros</a></li>
+              <li><a href="contact_es.html">Contacto</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -148,7 +148,7 @@
       <div class="container pt-17 pb-20 pt-md-19 pb-md-21 text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h1 class="display-1 mb-3 text-white">Get in Touch</h1>
+            <h1 class="display-1 mb-3 text-white">Contáctanos</h1>
 
             <!-- /nav -->
           </div>
@@ -183,7 +183,7 @@
                         <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-location-pin-alt"></i> </div>
                       </div>
                       <div class="align-self-start justify-content-start">
-                        <h5 class="mb-1">Address</h5>
+                        <h5 class="mb-1">Dirección</h5>
                         <address>Misiones 1372, 6th Floor <br class="d-none d-md-block" />Montevideo, Uruguay</address>
                       </div>
                     </div>
@@ -193,7 +193,7 @@
                         <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-phone-volume"></i> </div>
                       </div>
                       <div>
-                        <h5 class="mb-1">Phone</h5>
+                        <h5 class="mb-1">Teléfono</h5>
                         <p><a href="tel:+59829169416">+598 2916 9416</a></p>
                       </div>
                     </div>
@@ -243,7 +243,7 @@
                         <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-location-pin-alt"></i> </div>
                       </div>
                       <div class="align-self-start justify-content-start">
-                        <h5 class="mb-1">Address</h5>
+                        <h5 class="mb-1">Dirección</h5>
                         <address>AVDA. AVIADORES DEL CHACO NO. 3207, EDIF. TRADING PARK - PISO 15, OF. 1502, 1503 <br class="d-none d-md-block" />ASUNCION, PARAGUAY
                         </address>
                       </div>
@@ -297,35 +297,36 @@
               <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
               <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
             </nav>
-            <!-- /.social -->
+              <!-- /.social -->
+            </div>
+            <!-- /.widget -->
           </div>
-          <!-- /.widget -->
-        </div>
-        <!-- /column -->
-        <div class="col-md-4 col-lg-3">
-          <div class="widget">
-            <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-            <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
-            <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
+          <!-- /column -->
+          <div class="col-md-4 col-lg-3">
+            <div class="widget">
+              <h4 class="widget-title text-white mb-3">Contacto</h4>
+              <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
+              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
+            </div>
+            <!-- /.widget -->
           </div>
-          <!-- /.widget -->
-        </div>
-        <!-- /column -->
-        <div class="col-md-4 col-lg-3">
-          <div class="widget">
-            <h4 class="widget-title text-white mb-3">Learn More</h4>
-            <ul class="list-unstyled  mb-0">
-              <li><a href="aboutLogistics.html">About Us</a></li>
-              <li><a href="Project.html">Projects</a></li>
-            </ul>
+          <!-- /column -->
+          <div class="col-md-4 col-lg-3">
+            <div class="widget">
+              <h4 class="widget-title text-white mb-3">Saber más</h4>
+              <ul class="list-unstyled  mb-0">
+                <li><a href="aboutLogistics_es.html">Sobre nosotros</a></li>
+                <li><a href="Project_es.html">Proyectos</a></li>
+              </ul>
+            </div>
+            <!-- /.widget -->
           </div>
-          <!-- /.widget -->
+          <!-- /column -->
+         
+          <!-- /column -->
         </div>
-        <!-- /column -->
-
-        <!-- /column -->
+        <!--/.row -->
       </div>
-      <!--/.row -->
     </div>
     <!-- /.container -->
   </footer>
