--- a/logistics/test/single-project-yatch_es.html
+++ b/logistics/test/single-project-yatch_es.html
@@ -48,7 +48,7 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./technology.html"">Technology</a>
+                  <a class="nav-link" href="./technology.html"">Tecnology</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="./green.html"">Go Green</a>
