--- a/logistics/test/Ocean_es.html
+++ b/logistics/test/Ocean_es.html
@@ -48,7 +48,7 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./technology_es.html">Technología</a>
+                  <a class="nav-link" href="./technology_es.html">Tecnología</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="./green_es.html">Cambio climático</a>
