--- a/logistics/test/green.html
+++ b/logistics/test/green.html
@@ -205,7 +205,7 @@
                   <div class="card-body">
                     <img src="./assets/img/icons/lineal/earth.svg" class="svg-inject icon-svg icon-svg-md text-primary mb-3" alt="" />
                     <h4>Active Participation in Climate Change Initiatives</h4>
-                    <p class="mb-0">Through our partnership with Evertreen, we actively participate in reforestation projects that absorb CO2 from the atmosphere.
+                    <p class="mb-0">Through our partnership with companies, we actively participate in reforestation projects that absorb CO2 from the atmosphere.
                       We invest in renewable energy projects and encourage the adoption of green energy solutions.</p>
                   </div>
                   <!--/.card-body -->
