--- a/logistics/test/technology_es.html
+++ b/logistics/test/technology_es.html
@@ -33,9 +33,6 @@
             <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./aboutLogistics.html"">About Us</a>
-                </li>
-                <li class="nav-item dropdown">
                   <a class="nav-link" href="./aboutLogistics_es.html"">Sobre nosotros</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -50,7 +47,7 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./technology_es.html">Technología</a>
+                  <a class="nav-link" href="./technology_es.html">Tecnología</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="./green_es.html">Cambio climático</a>
@@ -149,8 +146,8 @@
       <div class="container pt-19 pt-md-21 pb-18 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-10 col-lg-8 col-xl-7 col-xxl-6 mx-auto">
-            <h1 style="color:white" class="display-1 mb-5 mx-md-10 mx-lg-0">Our platform is effortless and powerful with <br /><span class="typer text-primary text-nowrap" data-delay="100" data-words="easy usage,fast,secure, 24/7"></span><span class="cursor text-primary" data-owner="typer"></span>access</h1>
-            <p class="lead fs-lg mb-7">Achieve your goals. Have all your information, time, tracking, expenses and invoices in one place.</p>
+            <h1 style="color:white" class="display-1 mb-5 mx-md-10 mx-lg-0">Nuestra plataforma es sencilla, potente y <br /><span class="typer text-primary text-nowrap" data-delay="100" data-words="de fácil uso,rápida,segura,siempre disponible"></span><span class="cursor text-primary" data-owner="typer"></span></h1>
+            <p class="lead fs-lg mb-7">Alcanza tus objetivos. Ten toda tu información, tiempo, seguimiento, gastos y facturas en un solo lugar.</p>
           </div>
           <!-- /column -->
         </div>
@@ -167,8 +164,8 @@
         <!-- /div -->
         <div class="row">
           <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 mx-auto text-center">
-            <h2 class="fs-15 text-uppercase text-muted mb-3">Why Choose us?</h2>
-            <h3 class="display-4 mb-10 px-xl-10 px-xxl-15">Here are a few reasons why our customers choose our platform.</h3>
+            <h2 class="fs-15 text-uppercase text-muted mb-3">¿Porqué elegirnos?</h2>
+            <h3 class="display-4 mb-10 px-xl-10 px-xxl-15">Aquí alguna de las razones mas valoradas por nuestros clientes.</h3>
           </div>
           <!-- /column -->
         </div>
@@ -177,22 +174,22 @@
           <li class="nav-item"> <a class="nav-link d-flex flex-row active" data-bs-toggle="tab" href="#tab2-1">
               <div><img src="./assets/img/icons/lineal/rocket.svg" class="svg-inject icon-svg icon-svg-md text-yellow me-4" alt="" /></div>
               <div>
-                <h4 class="mb-1">Easy Usage</h4>
-                <p>This platform ensures quick onboarding and minimal training, allowing our clients to efficiently manage all the shipments data. Our user-friendly interface save time and reduce errors.</p>
+                <h4 class="mb-1">Fácil uso</h4>
+                <p>Nuestra plataforma garantiza una rápida incorporación y una capacitación mínima, permitiendo a nuestros clientes gestionar eficientemente todos los datos de sus cargas. Nuestra interfaz fácil de usar ahorra tiempo y reduce errores.</p>
               </div>
             </a> </li>
           <li class="nav-item"> <a class="nav-link d-flex flex-row" data-bs-toggle="tab" href="#tab2-2">
               <div><img src="./assets/img/icons/lineal/earth.svg" class="svg-inject icon-svg icon-svg-md text-green me-4" alt="" /></div>
               <div>
-                <h4 class="mb-1">Tracking</h4>
-                <p>Our platform for cargo tracking provides real-time visibility and updates. It also streamlines communication and documentation, leading to improved accuracy and customer satisfaction.</p>
+                <h4 class="mb-1">Seguimiento</h4>
+                <p>Nuestra plataforma de seguimiento de carga ofrece visibilidad y actualizaciones en tiempo real. También optimiza la comunicación y la documentación, lo que mejora la precisión y la satisfacción de nuestros cliente.</p>
               </div>
             </a> </li>
           <li class="nav-item"> <a class="nav-link d-flex flex-row" data-bs-toggle="tab" href="#tab2-3">
               <div><img src="./assets/img/icons/lineal/calculator.svg" class="svg-inject icon-svg icon-svg-md text-red me-4" alt="" /></div>
               <div>
-                <h4 class="mb-1">Reduce Costs</h4>
-                <p>Our technology help to reduces costs by minimizing errors, and optimizing time. Clients can avoid unnecessary expenses, such as demurrage fees or expedited shipping, by having real-time insights into their cargo's location and status.</p>
+                <h4 class="mb-1">Reduce Costos</h4>
+                <p>Nuestra tecnología ayuda a reducir costos minimizando errores y optimizando el tiempo. Los clientes pueden evitar gastos innecesarios, como cargos por demora, al contar con información en tiempo real sobre la ubicación y el estado de su carga.</p>
               </div>
             </a> </li>
         </ul>
@@ -216,14 +213,14 @@
               </div>
               <!--/column -->
               <div class="col-lg-6">
-                <h2 class="mb-3">Easy Usage</h2>
-                <p>Our platform's intuitive design allows users to navigate and access essential features with minimal effort, reducing the need for extensive training. Its straightforward interface, real-time tracking, and easy report generation. This simplicity ensures that both tech-savvy and non-technical users can efficiently manage their shipments, leading to faster adoption and smoother operations.</p>
+                <h2 class="mb-3">Usabilidad</h2>
+                <p>El diseño intuitivo de nuestra plataforma permite a nuestros clientes navegar y acceder a las funciones esenciales con un mínimo esfuerzo, reduciendo la necesidad de una capacitación extensa. Su interfaz es simple, permite seguimiento en tiempo real y fácil generación de informes. Esta simplicidad garantiza que tanto nuestros clientes con conocimientos técnicos como aquellos sin experiencia técnica puedan gestionar eficientemente sus cargas, lo que conduce a una adopción más rápida y operaciones más fluidas.</p>
                 <ul class="icon-list bullet-bg bullet-soft-green">
-                  <li><i class="uil uil-check"></i>The platform is designed for easy navigation, allowing users to quickly access.</li>
-                  <li><i class="uil uil-check"></i>Minimal training is required, allowing our clients to start using the platform efficiently from day one.</li>
-                  <li><i class="uil uil-check"></i>Reduce the chance of errors and save time, improving overall productivity.</li>
+                  <li><i class="uil uil-check"></i>La plataforma está diseñada para una fácil navegación, permitiendo a los usuarios acceder rápidamente.</li>
+                  <li><i class="uil uil-check"></i>No es necesario capacitarse ni entrenarse para utilizar nuestra plaraforma, nuestros clientes pueden comenzar a utilizarla desde el dia uno.</li>
+                  <li><i class="uil uil-check"></i>Reduce la posibilidad de errores y ahorra tiempo, mejorando la productividad en general.</li>
                 </ul>
-                <a href="contact.html" class="btn btn-green mt-2">Do you want to know more?</a>
+                <a href="contact_es.html" class="btn btn-green mt-2">¿Quieres saber más?</a>
               </div>
               <!--/column -->
             </div>
