se arregla carga proyectos

--- a/index_esTest.html
+++ b/index_esTest.html
@@ -120,7 +120,7 @@ Navigation
                     <li><a href="#home"><b>INICIO</b></a></li>
                     <li class="separador"><b>|</b></li>
                     <!-- <li><a href="#about">Agency</a> -->
-                    <li><a href="#services"><b>R® EMPRESAS</b></a></li>
+                    <li><a href="#services"><b>EMPRESAS</b></a></li>
                     <li class="separador"><b>|</b></li>
                     <li><a href="#contact"><b>CONTACTO</b></a></li>
                     <li class="separador"><b>|</b></li>
