--- a/logistics/test/aboutLogistics_es.html
+++ b/logistics/test/aboutLogistics_es.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Logistics, Forwarder, Forwarder in Uruguay, Logistics Trust, Move Cargo, Project Cargo, Ocean Freight, air Freight, Terrestrial Freight">
   <meta name="author" content="Repremar Group">
   <title>Repremar Logistics</title>
-  <link rel="shortcut icon" href="./assets/img/favicon.png">
+  <link rel="shortcut icon" href="./assets/img/faviconRep.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="preload" href="./assets/css/fonts/dm.css" as="style" onload="this.rel='stylesheet'">
@@ -188,7 +188,7 @@
           <!--/column -->
           <div class="col-md-6 col-lg-3">
             <img src="./assets/img/icons/lineal/target.svg" class="svg-inject icon-svg icon-svg-md text-green mb-3" alt="" />
-            <h4>Servicioe</h4>
+            <h4>Servicios</h4>
             <p class="mb-2"><h6>Orientado al cliente</h6> Nuestro equipo está disponible para atender sus inquietudes y proporcionar soluciones personalizadas, asegurando operaciones fluidas y eficientes.
               <br><br>
               <h6>Gestión Logística Integral</h6>Desde inicio hasta la entrega final, gestionamos cada paso del proceso con precisión, ofreciendo tranquilidad y fiabilidad.</p>
