--- a/logistics/test/quoteSinFormNetlify.html
+++ b/logistics/test/quoteSinFormNetlify.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Logistics, Forwarder, Forwarder in Uruguay, Logistics Trust, Move Cargo, Project Cargo, Ocean Freight, air Freight, Terrestrial Freight">
   <meta name="author" content="Repremar Group">
   <title>Repremar Logistics</title>
-  <link rel="shortcut icon" href="./assets/img/favicon.png">
+  <link rel="shortcut icon" href="./assets/img/faviconRep.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src=”https://www.google.com/recaptcha/api.js” async defer></script>
