--- a/logistics/test/single-project-yatch.html
+++ b/logistics/test/single-project-yatch.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Logistics, Forwarder, Forwarder in Uruguay, Logistics Trust, Move Cargo, Project Cargo, Ocean Freight, air Freight, Terrestrial Freight">
   <meta name="author" content="Repremar Group">
   <title>Repremar Logistics</title>
-  <link rel="shortcut icon" href="./assets/img/favicon.png">
+  <link rel="shortcut icon" href="./assets/img/faviconRep.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -83,7 +83,7 @@
                 <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="green_es.html">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="single-project-yatch_es.html">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
