--- a/logistics/test/technology_es.html
+++ b/logistics/test/technology_es.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Logistics, Forwarder, Forwarder in Uruguay, Logistics Trust, Move Cargo, Project Cargo, Ocean Freight, air Freight, Terrestrial Freight">
   <meta name="author" content="Repremar Group">
   <title>Repremar Logistics</title>
-  <link rel="shortcut icon" href="./assets/img/favicon.png">
+  <link rel="shortcut icon" href="./assets/img/faviconRep.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="preload" href="./assets/css/fonts/dm.css" as="style" onload="this.rel='stylesheet'">
@@ -147,7 +147,7 @@
         <div class="row">
           <div class="col-md-10 col-lg-8 col-xl-7 col-xxl-6 mx-auto">
             <h1 style="color:white" class="display-1 mb-5 mx-md-10 mx-lg-0">Nuestra plataforma es sencilla, potente y <br /><span class="typer text-primary text-nowrap" data-delay="100" data-words="de fácil uso,rápida,segura,siempre disponible"></span><span class="cursor text-primary" data-owner="typer"></span></h1>
-            <p class="lead fs-lg mb-7">Alcanza tus objetivos. Ten toda tu información, tiempo, seguimiento, gastos y facturas en un solo lugar.</p>
+            <p class="lead fs-lg mb-7">Alcanza tus objetivos. Consulta toda tu información, tiempos, seguimiento, gastos y facturas en un solo lugar.</p>
           </div>
           <!-- /column -->
         </div>
