se arregla continainer

--- a/indexTest.html
+++ b/indexTest.html
@@ -126,11 +126,11 @@ Navigation
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
 
-                    <li><a href="#home"><b>R® HOME</b></a></li>
+                    <li><a href="#home"><b>HOME</b></a></li>
                     <li class="separador"><b>|</b></li>
                     
                     <!-- <li><a href="#about">Agency</a> -->
-                    <li><a href="#services"><b>R® COMPANIES</b></a></li>
+                    <li><a href="#services"><b>COMPANIES</b></a></li>
                     <li class="separador"><b>|</b></li>
                     <li><a href="#contact"><b>CONTACT</b></a></li>
                     <li class="separador"><b>|</b></li>
