--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -84,7 +84,7 @@
                 <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="green_es.html">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="contact_es.html">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
