--- a/logistics/test/container_conForm.html
+++ b/logistics/test/container_conForm.html
@@ -260,8 +260,159 @@
       <!-- /.container -->
     </section>
   
-  
+    <!-- /section -->
+  <h1 style="text-align:center;">Request a quote</h1>
 
+  <section class="wrapper bg-light">
+
+  <div class="container py-14 py-md-16">
+
+    <div class="row">
+      <div class="col-xl-10 mx-auto">
+
+        <div class="row gy-10 gx-lg-8 gx-xl-12">
+          <div class="col-lg-8">
+            <form class="contact-form needs-validation" method="post" action="./assets/php/contactContainer.php" novalidate>
+              <div class="messages"></div>
+              <div class="row gx-4">
+                <div class="col-md-6">
+                  <div class="form-floating mb-4">
+                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Jane" required>
+                    <label for="form_name">First Name *</label>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please enter your first name.
+                    </div>
+                  </div>
+                </div>
+                <!-- /column -->
+                <div class="col-md-6">
+                  <div class="form-floating mb-4">
+                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Doe" required>
+                    <label for="form_lastname">Last Name *</label>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please enter your last name.
+                    </div>
+                  </div>
+                </div>
+                <!-- /column -->
+                <div class="col-md-6">
+                  <div class="form-floating mb-4">
+                    <input id="form_email" type="email" name="email" class="form-control" placeholder="jane.doe@example.com" required>
+                    <label for="form_email">Email *</label>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please provide a valid email address.
+                    </div>
+                  </div>
+                </div>
+                <!-- /column -->
+                <div class="col-md-6">
+                  <div class="form-select-wrapper mb-4">
+                    <select class="form-select" id="form-select" name="type" required>
+                      <option selected disabled value="">Select a container type</option>
+                      <option value="Sales">20HC</option>
+                      <option value="Marketing">40DC</option>
+                    </select>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please select a department.
+                    </div>
+                  </div>
+                </div>
+                <!-- /column -->
+                <div class="col-12">
+                  <div class="form-floating mb-4">
+                    <textarea id="form_message" name="message" class="form-control" placeholder="Your message" style="height: 150px" required></textarea>
+                    <label for="form_message">Message *</label>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please enter your messsage.
+                    </div>
+                  </div>
+                </div>
+                <!-- /column -->
+                
+
+
+                <div class="col-12">
+                  <script src="https://www.google.com/recaptcha/api.js"></script>
+                  <div class="form-group">
+                    <input class="form-control d-none" data-recaptcha="true" required>
+                    <div class="g-recaptcha" data-sitekey="6LeLlkAqAAAAABy_1Ieb-mhEwGgdFgo3C5lH7_YN" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please complete the Captcha
+                    </div>
+                  </div>
+                </div>
+                <!-- /column -->
+                <div class="col-12">
+                  <input type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Send message">
+                  <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                </div>
+                <!-- /column -->
+              </div>
+              <!-- /.row -->
+            </form>
+            <!-- /form -->
+          </div>
+          <!--/column -->
+          <div class="col-lg-4">
+            <div class="d-flex flex-row">
+              <div>
+                <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-location-pin-alt"></i> </div>
+              </div>
+              <div>
+                <h5 class="mb-1">Address</h5>
+                <address>Misiones 1372, 6th Floor, Montevideo, Uruguay</address>
+              </div>
+            </div>
+            <div class="d-flex flex-row">
+              <div>
+                <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-phone-volume"></i> </div>
+              </div>
+              <div>
+                <h5 class="mb-1">Phone</h5>
+                <p><a href="tel:+59829169416">+598 2916 9416</a></p>
+              </div>
+            </div>
+            <div class="d-flex flex-row">
+              <div>
+                <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-envelope"></i> </div>
+              </div>
+              <div>
+                <h5 class="mb-1">E-mail</h5>
+                <p class="mb-0"><a href="mailto:contenedores@repremar.com" class="text-body">contenedores@repremar.com</a></p>
+              </div>
+            </div>
+          </div>
+          <!--/column -->
+        </div>
+        <!--/.row -->
+      </div>
+      <!-- /column -->
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+</section>
+<!-- /section -->
+
+    <!-- /section -->
   </div>
   <!-- /.content-wrapper -->
   <footer class="bg-dark text-inverse">
