se arregla logo de repremar.com

--- a/index_esTest.html
+++ b/index_esTest.html
@@ -47,15 +47,7 @@ Style Sheets
 
 <body>
 <!-- Preloader -->
-<div id="preloader">
-    <div id="status">
-      <div class="row cf">
-            <div class="loader_Ani">
-                <div class="timer"></div>
-            </div>
-        </div>    
-    </div>
-</div>
+
 <!--=================================
 Vegas Slider Images 
 (Thses imges are being fetch by javascript in main.js file so that user do not need to change javascript. 
@@ -153,7 +145,7 @@ Navigation
 
       <section id="services">
             <div class="container">
-                <h1><font color="#193a6b"><b>EMPRESAS R®</b></font></h1>
+                <h1><font color="#193a6b"><b>EMPRESAS</b></font></h1>
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-8 col-sm-offset-2 col-lg-offset-3 col-md-offset-3">
                         <p style="line-height:22px;"></p>
