--- a/indexTest.html
+++ b/indexTest.html
@@ -165,7 +165,7 @@ Navigation
 
         <section id="services">
             <div class="container">
-                <h1><font color="#193a6b"><b>R® COMPANIES</b></font></h1>
+                <h1><font color="#193a6b"><b>COMPANIES</b></font></h1>
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-8 col-sm-offset-2 col-lg-offset-3 col-md-offset-3">
                         <p style="line-height:22px;"></p>
