--- a/shipping/test/index.html
+++ b/shipping/test/index.html
@@ -90,7 +90,7 @@
         <!-- /.navbar -->
         <div class="offcanvas offcanvas-end text-inverse" id="offcanvas-info" data-bs-scroll="true">
           <div class="offcanvas-header">
-            <h3 class="text-white fs-30 mb-0">Repremar Logistics</h3>
+            <h3 class="text-white fs-30 mb-0">Repremar Shipping</h3>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body pb-6">
