se pone en minusculas titulos del index

--- a/logistics/index.html
+++ b/logistics/index.html
@@ -194,7 +194,7 @@
                 <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                   <div class="px-md-3 px-lg-0 px-xl-3">
                     <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-ship"></i> </div>
-                    <h3 class="fs-22">LOGISTICS & INTERNATIONAL TRANSPORT</h3>
+                    <h3 class="fs-22">Logistics & International Transport</h3>
                     <p class="mb-2">Managing the efficient movement of goods across borders, ensuring timely delivery, compliance with regulations, and optimizing costs through strategic planning and technology. We are specialist on Ocean, Air, terrestrial and intermodal freights. We use state of the art technology solutions</p>
                     <a href="Ocean.html" class="more hover link-leaf">Learn More</a>
                   </div>
@@ -204,7 +204,7 @@
                 <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                   <div class="px-md-3 px-lg-0 px-xl-3">
                     <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-truck-loading"></i> </div>
-                    <h3 class="fs-22">INFRASTRUCTURE & WAREHOUSING</h3>
+                    <h3 class="fs-22">Infrastructure & Warehousing</h3>
                     <p class="mb-2">Focuses on the physical facilities and systems needed to store, manage, and distribute goods efficiently. This includes the construction and maintenance of warehouses, as well as the technology and processes used to ensure safe, organized, and timely storage and retrieval of products.</p>
                     <a href="./warehouse.html" class="more hover link-leaf">Learn More</a>
                   </div>
@@ -214,7 +214,7 @@
                 <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                   <div class="px-md-3 px-lg-0 px-xl-3">
                     <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-box"></i> </div>
-                    <h3 class="fs-22">CUSTOM OPERATIONS & REGIONAL DISTRIBUTION</h3>
+                    <h3 class="fs-22">Custom Operations & RegionalL Distribution</h3>
                     <p class="mb-2">Managing the compliance and clearance of goods through customs, ensuring they meet all legal and regulatory requirements. It also includes the strategic distribution of products within specific regions to optimize delivery times and costs, ensuring goods reach their final destination efficiently.</p>
                     <a href="Air.html" class="more hover link-leaf">Learn More</a>
                   </div>
@@ -223,7 +223,7 @@
                 <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                   <div class="px-md-3 px-lg-0 px-xl-3">
                     <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-lightbulb"></i> </div>
-                    <h3 class="fs-22">PROJECT CARGO MANAGEMENT</h3>
+                    <h3 class="fs-22">Project Cargo Management</h3>
                     <p class="mb-2">Specializes in handling large, complex, or high-value shipments that require careful planning, customized logistics solutions, and coordination. This includes transporting oversized or heavy equipment, often for industrial or infrastructure projects, with attention to route planning, special permits, and safety measures to ensure the successful delivery of the cargo.</p>
                     <a href="Project.html" class="more hover link-leaf">Learn More</a>
                   </div>
