se arregla warehousing

--- a/logistics/aboutLogistics_es.html
+++ b/logistics/aboutLogistics_es.html
@@ -260,7 +260,7 @@
         <!--/.row -->
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-7 order-lg-2">
-            <figure><img class="w-auto" src="./assets/img/photos/craneloadingcargo.jpg" srcset="./assets/img/photos/craneloadingcargo.jpg 2x" alt="" /></figure>
+            <figure><img  src="./assets/img/photos/craneloadingcargo.jpg" alt="" /></figure>
           </div>
           <!--/column -->
           <div class="col-lg-5">
