se arregla tamaño de letras

--- a/logistics/aboutLogistics.html
+++ b/logistics/aboutLogistics.html
@@ -147,7 +147,7 @@
       <div class="container pt-10 pb-20 pt-md-14 pb-md-23 text-center">
         <div class="row">
           <div class="col-xl-5 mx-auto mb-6">
-            <h1 class="display-1 mb-3">About Us</h1>
+            <h1 class="display-1 mb-2">About Us</h1>
             <p class="lead mb-0">Originally conceived in 1996 as a division of REPREMAR Shipping to develop air cargo, ocean consolidated, and logistic services, REPREMAR Logistics became independent on May 1, 1999. Since then, REPREMAR Logistics has experienced an extraordinary development based on its dynamic management, its qualified and professional staff with a strong sense of duty, and its top-level network of global agents and representatives.</p>
           </div>
           <!-- /column -->
@@ -173,7 +173,7 @@
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h3 class="display-5 mb-5">The full service we are offering is specifically designed to meet your business needs and projects.</h3>
+            <h1 class="mb-1">The full service we are offering is specifically designed to meet your business needs and projects.</h3>
             <p>In an increasingly complex, dynamic, and demanding world, we are totally convinced of the importance of an Information Technology System. With this in mind, we are continuously investing on IT equipment and software to enhance and strengthen our abilities.
               .</p>
           </div>
