--- a/logistics/aboutLogistics_es.html
+++ b/logistics/aboutLogistics_es.html
@@ -171,7 +171,7 @@
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h3 class="display-5 mb-5">El servicio completo que ofrecemos está específicamente diseñado para satisfacer las necesidades y proyectos de su negocio.</h3>
+            <h3 class="mb-1">El servicio completo que ofrecemos está específicamente diseñado para satisfacer las necesidades y proyectos de su negocio.</h3>
             <p>En un mundo cada vez más complejo, dinámico y exigente, estamos completamente convencidos de la importancia de un sistema de tecnología de la información. Con esto en mente, invertimos continuamente en equipos y software para mejorar y fortalecer nuestras capacidades.</p>
           </div>
           <!--/column -->
