se agrega info de la carga especial de yates

--- a/logistics/single-project-yatch2.html
+++ b/logistics/single-project-yatch2.html
@@ -172,7 +172,8 @@
               <div class="row gx-0">
                 <div class="col-md-9 text-justify">
                   <p>Transporting a yacht as part of a project cargo operation is a complex and highly specialized process. It begins with a detailed assessment of the yacht's dimensions, weight, and structural requirements to determine the best transportation method, whether by land (using specialized trailers), by sea (on a cargo vessel or yacht transport ship), or a combination of both.</p>
-                  <p>Key steps, Route Planning and Permits, Cradling and Securing, Loading and Unloading, Insurance and Documentation, Environmental Factors and Communication and Coordination</p>
+                  <p>We successfully completed an extraordinary operation alongside Repremar Shipping, who managed the Furkayvessel, arriving from Genoa with four stunning yachts transported by Repremar Logistics.
+                    The unloading was carried out by Monteón at the Port of Montevideo after two days of relentless work. This is yet another example of the teamwork within the Repremar Group, showcasing how internal collaboration and dedication lead to outstanding results and customer satisfaction.</p>
                 </div>
                 <!--/column -->
                 <div class="col-md-2 ms-auto">
