--- a/logistics/single-project-yatch2_es.html
+++ b/logistics/single-project-yatch2_es.html
@@ -170,7 +170,9 @@
               <div class="row gx-0">
                 <div class="col-md-9 text-justify">
                   <p>Transportar un yate como parte de una operación de carga de proyecto es un proceso complejo y altamente especializado. Comienza con una evaluación detallada de las dimensiones, peso y requisitos estructurales del yate para determinar el mejor método de transporte, ya sea por tierra (utilizando remolques especializados), por mar (en un buque de carga o barco de transporte de yates), o una combinación de ambos.</p>
-                  <p>Pasos clave, Planificación de rutas y permisos, Apilado y aseguramiento, Carga y descarga, Seguros y documentación,  Factores ambientales, Comunicación y coordinación</p>
+                  <p>culminamos una operativa extraordinaria junto a Repremar Shipping, encargados de agenciar el barco Furkay, proveniente de Génova con cuatro impresionantes yates transportados por Repremar Logistics.
+                    La descarga fue llevada a cabo por la empresa Monteón en el puerto de Montevideo tras dos días de intenso trabajo. Este es otro ejemplo del trabajo en equipo entre empresas del Grupo Repremar, que demuestra cómo la colaboración interna y el compromiso permiten alcanzar resultados excepcionales y satisfacer a nuestros clientes.
+                    </p>
                 </div>
                 <!--/column -->
                 <div class="col-md-2 ms-auto">
