--- a/shipping/nueva2025/contact.html
+++ b/shipping/nueva2025/contact.html
@@ -144,7 +144,7 @@
           <!-- /column -->
           <div class="col-md-10 offset-md-1 offset-lg-0 col-lg-5 text-center text-lg-start">
             <h1 class="display-1 mb-5 mx-md-n5 mx-lg-0">Let's Build Something Great Together!</h1>
-            <p class="lead fs-lg mb-7">We're always open to new collaborations and are committed to delivering real value to our partners.</p>
+            <p class="lead fs-lg mb-7">We're always open to new collaborations and committed to delivering real value to our partners.</p>
             <span><a class="btn btn-primary rounded-pill me-2">Email</a></span>
           </div>
           <!-- /column -->
