--- a/shipping/nueva2025/index.html
+++ b/shipping/nueva2025/index.html
@@ -293,7 +293,7 @@
       <div class="container pt-12 pt-md-14 pb-14 pb-md-16">
         <div class="row gx-md-8 gx-xl-12 gy-6 align-items-center">
           <div class="col-md-8 col-lg-6 mx-auto">
-            <div><img src="./assets/img/calidad.png" /><img src="./assets/img/calidad2.png" class="mt-4" /></div>
+            <div><img class="img-fluid" src="./assets/img/calidad.png" /><img class="img-fluid mt-4" src="./assets/img/calidad2.png"/></div>
           </div>
           <!--/column -->
           <div class="col-lg-6">
